src/components/Quote/styles.module.css
.root {
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: center;
  margin: 0 auto;
  max-width: 60vw;
  padding: 24px;
  position: relative;
  width: 100%;
}

.root blockquote {
  font-size: 40px;
  font-weight: 700;
  line-height: 1.33;
  margin: 0 0 12px;
  position: relative;
}

.root blockquote::before {
  content: '“';
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-size: 124px;
  left: -12px;
  line-height: 1;
  opacity: 0.3;
  position: absolute;
  top: -10px;
  transform: translateX(-100%);
}

@media only screen and (max-width: 767px) {
  .root {
    height: 100vh;
    margin: 0;
    max-width: 100%;
    padding: 24px;
  }

  .root blockquote {
    font-size: 26px;
  }

  .root blockquote::before {
    left: 24px;
    top: -64px;
    transform: translateX(-50%);
  }

  .next {
    display: none;
  }
}

@media only screen and (min-width: 768px) and (max-width: 1023px) {
  .root {
    max-width: 80vw;
  }
}

